--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -19,3 +19,8 @@ jobs:
 
     - name: Run Docker container
       run: docker run hello-python
+
+    - name: update and upgrade
+      run: |
+        sudo apt update && sudo apt upgrade -y
+        
